# fission

./: .gitignore  .gitmodules  Cargo.toml  GEMINI.md  README.md  commit_msg_3.txt
crates/authoring/fission/: Cargo.toml  README.md
crates/authoring/fission-charts/: Cargo.toml  README.md
crates/authoring/fission-charts/src/: animation.rs  axis.rs  chart.rs  coord.rs  grid.rs  interaction.rs  legend.rs  lib.rs  model.rs  tooltip.rs
crates/authoring/fission-charts/tests/: chart_tests.rs
crates/authoring/fission-icons/: Cargo.toml  README.md
crates/authoring/fission-icons/src/: lib.rs
crates/authoring/fission-macros/: Cargo.toml  README.md
crates/authoring/fission-macros/src/: lib.rs
crates/authoring/fission-site/: Cargo.toml
crates/authoring/fission-site/assets/: site.css  site.js
crates/authoring/fission-site/src/: app.rs  builder.rs  config.rs  lib.rs  markdown.rs  render.rs  utils.rs
crates/authoring/fission-widgets/: Cargo.toml  README.md
crates/authoring/fission-widgets/src/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  center.rs  checkbox.rs  circular_progress.rs  code.rs  combobox.rs  container.rs  data_table.rs  date_picker.rs  date_range_picker.rs  divider.rs  draggable.rs  drawer.rs  dropdown.rs  dropzone.rs  editable.rs  empty_state.rs  file_upload.rs  form_control.rs  future_builder.rs  hero.rs  lib.rs  link.rs  markdown.rs  menu.rs  modal.rs  node.rs  number_input.rs  pagination.rs  popover.rs  progress.rs  range_slider.rs  (+24 more)
crates/authoring/fission-widgets/tests/: calendar_test.rs  circular_progress_test.rs  combobox_test.rs  component_tests.rs  derive_action.rs  draggable_test.rs  drawer_test.rs  dropzone_test.rs  empty_state_test.rs  file_upload_test.rs  form_control_test.rs  future_builder_test.rs  hero_test.rs  markdown_viewer_test.rs  number_input_test.rs  pagination_test.rs  refresh_indicator_test.rs  router_test.rs  split_view_test.rs  theme_alignment.rs  time_picker_test.rs  timeline_test.rs  tooltip_test.rs  tree_view_test.rs  widget_invariants.rs  widget_tests.rs
crates/authoring/fission/src/: lib.rs
crates/authoring/fission/tests/: desktop_tray_api.rs  platform_api.rs  prelude_macros.rs
crates/core/fission-3d/: Cargo.toml  README.md
crates/core/fission-3d/src/: lib.rs  render.rs
crates/core/fission-3d/tests/: 3d_tests.rs
crates/core/fission-core/: Cargo.toml  README.md
crates/core/fission-core/src/: action.rs  async_runtime.rs  capability.rs  context.rs  devtools.rs  diff.rs  effect.rs  env.rs  event.rs  hit_test.rs  lib.rs  lowering.rs  media.rs  platform.rs  platform_barcode.rs  platform_biometric.rs  platform_bluetooth.rs  platform_camera.rs  platform_clipboard.rs  platform_geolocation.rs  platform_haptics.rs  platform_microphone.rs  platform_nfc.rs  platform_passkey.rs  platform_volume.rs  platform_wifi.rs  registry.rs  runtime.rs  scrollbar.rs  state.rs  time.rs  ui.rs  view.rs
crates/core/fission-core/tests/: animation_invariants.rs  async_resource_runtime.rs  core_runtime_invariants.rs  devtools_inspector.rs  hit_test_nested_scroll.rs  hit_test_paint_blocking.rs  hit_test_scroll.rs  hover_runtime_tests.rs  i18n_text.rs  image_widget.rs  input_controller_tests.rs  platform_effects.rs  text_input_logic.rs  text_surface_api.rs  video.rs  web.rs  widget_alignment.rs
crates/core/fission-i18n/: Cargo.toml  README.md
crates/core/fission-i18n/src/: lib.rs
crates/core/fission-ir/: Cargo.toml  README.md
crates/core/fission-ir/src/: lib.rs  node_id.rs  op.rs  semantics.rs  widget_id.rs
crates/core/fission-ir/tests/: ir_invariants.rs
crates/core/fission-layout/: Cargo.toml  README.md
crates/core/fission-semantics/: Cargo.toml  README.md
crates/core/fission-text-engine/: Cargo.toml  README.md
crates/core/fission-theme/: Cargo.toml  README.md  build.rs
examples/animation-gallery/: Cargo.toml  README.md
examples/animation-gallery/src/: main.rs
examples/animation-gallery/tests/: live_e2e.rs
examples/chart-gallery/: Cargo.toml  README.md
examples/chart-gallery/src/: app.rs  data.rs  main.rs  showcase.rs  state.rs  style.rs
examples/chart-gallery/tests/: live_e2e.rs
examples/counter/: Cargo.toml  README.md
examples/counter/src/: main.rs
examples/counter/tests/: live_e2e.rs
examples/editor/: Cargo.toml  README.md
examples/editor/proto/: editor.proto
examples/editor/src/: breadcrumb.rs  command_palette.rs  completion_popup.rs  context_menu.rs  diagnostics_panel.rs  editor_render_node.rs  editor_surface.rs  file_tree.rs  find_replace_bar.rs  git_panel.rs  hover_tooltip.rs  main.rs  menu_bar.rs  minimap.rs  model.rs  search_panel.rs  status_bar.rs  syntax.rs  tab_bar.rs  terminal_panel.rs
examples/editor/tests/: live_e2e.rs  widget_tests.rs
examples/embed-3d/: Cargo.toml  README.md
examples/embed-3d/src/: lib.rs
examples/embed-video/: Cargo.toml  README.md
examples/icons_gallery/: Cargo.toml  README.md
examples/icons_gallery/src/: main.rs
examples/icons_gallery/tests/: live_e2e.rs
examples/inbox/: Cargo.toml  README.md
examples/inbox/src/: main.rs
examples/inbox/tests/: live_e2e.rs
examples/mobile-smoke/: Cargo.toml  README.md
examples/mobile-smoke/src/: lib.rs  main.rs
examples/pokemon-card-store/: Cargo.toml  README.md  fission.toml
examples/pokemon-card-store/src/: app.rs  cart.rs  data.rs  islands.rs  lib.rs  main.rs  server.rs  workers.rs
examples/pokemon-card-store/tests/: browser_bridge.rs  browser_bridge_e2e.mjs  server.rs
examples/terminal/: Cargo.toml  README.md
examples/terminal/src/: main.rs
examples/terminal/tests/: live_e2e.rs
examples/text-lab/: Cargo.toml  README.md
examples/text-lab/src/: main.rs
examples/text-lab/tests/: live_e2e.rs
examples/todo-design-system/: Cargo.toml  README.md  build.rs
examples/todo-design-system/src/: main.rs
examples/web-smoke/: Cargo.toml  README.md
examples/web-smoke/src/: app.rs  lib.rs
examples/widget-gallery/: Cargo.toml  README.md
examples/widget-gallery/src/: main.rs
examples/widget-gallery/tests/: live_e2e.rs  visual_audit.rs
(+1811 files in other folders)
