[workspace]
members = [
    "crates/core/fission-ir",
    "crates/core/fission-semantics",
    "crates/core/fission-layout",
    "crates/core/fission-core",
    "crates/authoring/fission-macros",
    "crates/authoring/fission-widgets",
    "crates/authoring/fission-icons",
    "crates/authoring/fission-charts",
    "crates/core/fission-core",
    "crates/authoring/fission",
    "crates/rendering/fission-render",
#    "crates/rendering/fission-render-skia",
    "crates/rendering/fission-render-vello",
    "crates/shell/fission-shell",
    "crates/shell/fission-shell-desktop",
    "crates/shell/fission-shell-mobile",
    "crates/shell/fission-shell-web",
    "crates/tools/fission-diagnostics",
    "crates/tools/fission-test",
    "crates/tools/fission-test-driver",
    "examples/*"
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 1
