[workspace]
members = [
    "crates/core/fission-ir",
    "crates/core/fission-semantics",
    "crates/core/fission-layout",
    "crates/core/fission-core",
    "crates/core/fission-3d",
    "crates/core/fission-text-engine",
    "crates/authoring/fission-macros",
    "crates/authoring/fission-widgets",
    "crates/authoring/fission-icons",
    "crates/authoring/fission-charts",
    "crates/core/fission-core",
    "crates/authoring/fission",
    "crates/rendering/fission-render",
#    "crates/rendering/fission-render-skia",
    "crates/rendering/fission-render-vello",
    "crates/shell/fission-shell",
    "crates/shell/fission-shell-desktop",
    "crates/shell/fission-shell-winit",
    "crates/shell/fission-shell-mobile",
    "crates/shell/fission-shell-web",
    "crates/tools/fission-diagnostics",
    "crates/tools/fission-cli",
    "crates/tools/fission-test",
    "crates/tools/fission-test-driver",
    "examples/*"
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo_clippy)', 'cfg(feature, values("cargo-clippy"))'] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[patch.crates-io]
android-activity = { path = "third_party/android-activity/android-activity" }
