[workspace]
members = [
    "crates/core/fission-ir",
    "crates/core/fission-semantics",
    "crates/core/fission-layout",
    "crates/core/fission-core",
    "crates/core/fission-3d",
    "crates/core/fission-text-engine",
    "crates/core/fission-theme",
    "crates/authoring/fission-macros",
    "crates/authoring/fission-widgets",
    "crates/authoring/fission-icons",
    "crates/authoring/fission-charts",
    "crates/core/fission-core",
    "crates/authoring/fission",
    "crates/rendering/fission-render",
#    "crates/rendering/fission-render-skia",
    "crates/rendering/fission-render-vello",
    "crates/shell/fission-shell",
    "crates/shell/fission-shell-desktop",
    "crates/shell/fission-shell-winit",
    "crates/shell/fission-shell-mobile",
    "crates/shell/fission-shell-web",
    "crates/shell/fission-shell-site",
    "crates/shell/fission-shell-terminal",
    "crates/tools/fission-diagnostics",
    "crates/tools/cargo-fission",
    "crates/tools/fission-command-package",
    "crates/tools/fission-command-release",
    "crates/tools/fission-command-run",
    "crates/tools/fission-command-core",
    "crates/tools/fission-command-site",
    "crates/tools/fission-command-ui",
    "crates/tools/fission-credentials",
    "crates/tools/fission-design-system-codegen",
    "crates/tools/fission-test",
    "crates/tools/fission-test-driver",
    "documentation",
    "examples/*"
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo_clippy)', 'cfg(feature, values("cargo-clippy"))'] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[patch.crates-io]
android-activity = { path = "third_party/android-activity/android-activity" }
