[package]
name = "chart-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
fission-core = { path = "../../crates/core/fission-core" }
fission-ir = { path = "../../crates/core/fission-ir" }
fission-layout = { path = "../../crates/core/fission-layout" }
fission-widgets = { path = "../../crates/authoring/fission-widgets" }
fission-charts = { path = "../../crates/authoring/fission-charts" }
fission-3d = { path = "../../crates/core/fission-3d" }
fission-shell-desktop = { path = "../../crates/shell/fission-shell-desktop" }
fission-theme = { path = "../../crates/core/fission-theme" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
