[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission" }
fission-shell-desktop = { path = "../../crates/shell/fission-shell-desktop" }
fission-widgets = { path = "../../crates/authoring/fission-widgets" }
fission-core = { path = "../../crates/core/fission-core" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
serde = { version = "1.0", features = ["derive"] }
