[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop"] }
anyhow = "1.0"

[dev-dependencies]
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
image = "0.25"
