[package]
name = "embed-3d"
version = "0.1.0"
edition = "2021"

[lib]
name = "embed_3d"

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop", "three-d"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fission-test = { path = "../../crates/tools/fission-test" }
