[package]
name = "icons_gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission" }
fission-core = { path = "../../crates/core/fission-core" }
fission-widgets = { path = "../../crates/authoring/fission-widgets" }
fission-icons = { path = "../../crates/authoring/fission-icons", features = ["reflection"] }
fission-shell-desktop = { path = "../../crates/shell/fission-shell-desktop" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0"
