[package]
name = "inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop"] }
fission-ir = { path = "../../crates/core/fission-ir" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
lazy_static = "1.4"
serde_json = "1.0"

[dev-dependencies]
fission-test = { path = "../../crates/tools/fission-test" }
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
image = "0.25"
