[package]
name = "mobile-smoke"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobile_smoke"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
fission-core = { path = "../../crates/core/fission-core" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
fission-shell-mobile = { path = "../../crates/shell/fission-shell-mobile" }
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
