[package]
name = "pokemon-card-store"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["server"]
server = ["fission/server"]
browser = []

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pokemon-card-store"
path = "src/main.rs"
