[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop", "terminal-widget"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
arboard = "3.4"
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
