[package]
name = "web-smoke"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_smoke"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop", "web", "android", "ios"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
