[package]
name = "widget-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission" }
fission-shell-desktop = { path = "../../crates/shell/fission-shell-desktop" }
fission-widgets = { path = "../../crates/authoring/fission-widgets" }
fission-core = { path = "../../crates/core/fission-core" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
fission-icons = { path = "../../crates/authoring/fission-icons" }
fission-ir = { path = "../../crates/core/fission-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

[dev-dependencies]
fission-test = { path = "../../crates/tools/fission-test" }
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
fission-render = { path = "../../crates/rendering/fission-render" }
fission-layout = { path = "../../crates/core/fission-layout" }
image = "0.25"
