[package]
name = "widget-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

[dev-dependencies]
fission-test = { path = "../../crates/tools/fission-test" }
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
image = "0.25"
