[package]
name = "fission-charts"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.44"
fission-core = { path = "../../core/fission-core" }
fission-ir = { path = "../../core/fission-ir" }
fission-layout = { path = "../../core/fission-layout" }
fission-widgets = { path = "../fission-widgets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
