[package]
name = "fission-charts"
version = "0.3.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/worka-ai/fission"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
description = "Native chart widgets and data visualization primitives for Fission applications"
readme = "README.md"
[dependencies]
chrono = "0.4.44"
fission-core = { path = "../../core/fission-core", version = "0.3.0" }
fission-ir = { path = "../../core/fission-ir", version = "0.3.0" }
fission-layout = { path = "../../core/fission-layout", version = "0.3.0" }
fission-widgets = { path = "../fission-widgets", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
