[package]
name = "fission-icons"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Icons"

[dependencies]

[build-dependencies]
walkdir = "2.4"
heck = "0.4" # For case conversion if needed
serde_json = "1.0"

[features]
reflection = []
