[package]
name = "fission-icons"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Icon primitives and bundled icons for Fission applications"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]

[build-dependencies]
walkdir = "2.4"
heck = "0.4" # For case conversion if needed
serde_json = "1.0"

[features]
reflection = []
