[package]
name = "fission-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# For testing macros if needed, often done via `trybuild` or separate test crate