[package]
name = "fission-macros"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Procedural macros for Fission actions, reducers, and ergonomic app authoring"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4"

[dev-dependencies]
# For testing macros if needed, often done via `trybuild` or separate test crate
