[package]
name = "fission-site"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Static site generation support for Fission"

[dependencies]
anyhow = "1.0"
rushdown = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
