[package]
name = "fission"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Cross-platform GPU-accelerated UI framework for Rust"

[dependencies]
fission-core = { path = "../../core/fission-core", version = "0.1.1" }
fission-ir = { path = "../../core/fission-ir", version = "0.1.1" }
fission-layout = { path = "../../core/fission-layout", version = "0.1.1" }
fission-theme = { path = "../../core/fission-theme", version = "0.1.1" }
fission-i18n = { path = "../../core/fission-i18n", version = "0.1.1" }
fission-widgets = { path = "../fission-widgets", version = "0.1.1" }
fission-site = { path = "../fission-site", version = "0.1.1" }
fission-macros = { path = "../fission-macros", version = "0.1.1" }
fission-icons = { path = "../fission-icons", version = "0.1.1" }
fission-render = { path = "../../rendering/fission-render", version = "0.1.1" }
fission-diagnostics = { path = "../../tools/fission-diagnostics", version = "0.1.1" }
fission-test-driver = { path = "../../tools/fission-test-driver", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
fission-shell-desktop = { path = "../../shell/fission-shell-desktop", version = "0.1.1" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
fission-shell-mobile = { path = "../../shell/fission-shell-mobile", version = "0.1.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
fission-shell-web = { path = "../../shell/fission-shell-web", version = "0.1.1" }
