[package]
name = "fission-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Core"

[dependencies]
fission-ir = { path = "../fission-ir" }
fission-layout = { path = "../fission-layout" }
fission-semantics = { path = "../fission-semantics" }
fission-theme = { path = "../fission-theme" }
fission-i18n = { path = "../fission-i18n" }
fission-macros = { path = "../../authoring/fission-macros" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"
downcast-rs = "1.2"
lazy_static = "1.4"
blake3 = "1.5"
unicode-segmentation = "1.10"
glam = "0.29"
fission-diagnostics = { path = "../../tools/fission-diagnostics" }

[dev-dependencies]
