[package]
name = "fission-i18n"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Internationalization primitives for Fission applications"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
