[package]
name = "fission-ir"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Intermediate representation and display-list primitives for Fission rendering"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
