[package]
name = "fission-layout"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Layout"

[dependencies]
fission-ir = { path = "../fission-ir", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
fission-diagnostics = { path = "../../tools/fission-diagnostics", version = "0.1.1" }

[dev-dependencies]
