[package]
name = "fission-layout"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Layout engine primitives for Fission widget trees"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
fission-ir = { path = "../fission-ir", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
fission-diagnostics = { path = "../../tools/fission-diagnostics", version = "0.2.0" }

[dev-dependencies]
