[package]
name = "fission-semantics"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Semantics"

[dependencies]
fission-ir = { path = "../fission-ir", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
