[package]
name = "fission-semantics"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Accessibility and semantics primitives for Fission UI trees"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
fission-ir = { path = "../fission-ir", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
