[package]
name = "fission-theme"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Design tokens, Design System Package codegen output, and component themes for Fission"
include = [
    "src/**/*",
    "design/**/*",
    "build.rs",
    "README.md",
    "Cargo.toml",
    "fonts/Inter/static/Inter_24pt-Regular.ttf",
    "fonts/Noto_Sans/static/NotoSans-Regular.ttf",
]

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
fission-ir = { path = "../fission-ir", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
fission-design-system-codegen = { path = "../../tools/fission-design-system-codegen", version = "0.2.0" }
